# sistemas_distribuidos

practicas/p1/RubenBautista/ServidorMultiHilo/: bash.sh  client  client.c  server  server.c
practicas/p1/RubenBautista/ServidorSimple/: Makefile  client  client.c  server  server.c
practicas/p1/RubenBautista/ServidorSimpleNoBloqueante/: Makefile  client  client.c  server  server.c
practicas/p2/Ruben_Bautista/: Makefile  P1  P1.c  P2  P2.c  P3  P3.c  stub.c  stub.h
practicas/p3/Ruben_Bautista/: Makefile  checkP3.py  client  client.c  server  server (Copy).c  server.c  server_output.txt  stub.c  stub.h
practicas/p4/Ruben_Bautista/ros_ws/install/: local_setup.sh  setup.sh
practicas/p4/Ruben_Bautista/ros_ws/install/sdc_p4/include/sdc_p4/: bully.hpp
practicas/p4/Ruben_Bautista/ros_ws/install/sdc_p4/lib/sdc_p4/: bully
practicas/p4/Ruben_Bautista/ros_ws/install/sdc_p4/share/sdc_p4/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
practicas/p4/Ruben_Bautista/ros_ws/install/sdc_p4/share/sdc_p4/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  sdc_p4Config-version.cmake  sdc_p4Config.cmake
practicas/p4/Ruben_Bautista/ros_ws/log/: latest_build
practicas/p4/Ruben_Bautista/ros_ws/src/sdc_p4/: CMakeLists.txt
practicas/p4/Ruben_Bautista/ros_ws/src/sdc_p4/include/sdc_p4/: bully.hpp
practicas/p4/Ruben_Bautista/ros_ws/src/sdc_p4/src/: bully.cpp
(+5 files in other folders)
